# CosmWasm-Non-Transferable-NFT-Metadata-Onchain

./: Cargo.toml  README.md
examples/: schema.rs
schema/: nft.json
schema/raw/: execute.json
src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs
